# mcp-code-indexer

./: .codeindexignore  .gitignore  README.md  TEST_COVERAGE.md  install.sh  pyproject.toml  run_tests.py  setup_test_env.sh  simple_test.py  test_new_features.py  test_runner.py
mcp_code_indexer/: __init__.py  __main__.py  chunkers.py  config.py  db.py  embedder.py  hashing.py  ids.py  ignore.py  indexer.py  jobs.py  py_analyze.py  qdrant_store.py  rerank.py  search.py  security.py  server.py
tests/: conftest.py
tests/integration/: test_server_integration.py
tests/unit/: test_chunkers.py  test_config.py  test_db.py  test_hashing.py  test_security.py
